Bug 456446 - Can't pan with the 2 fingers on the trackpad
Summary: Can't pan with the 2 fingers on the trackpad
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Usability (other bugs)
Version First Reported In: git master (please specify the git hash!)
Platform: macOS (DMG) macOS
: NOR normal
Target Milestone: ---
Assignee: sh_zam
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-07-07 11:58 UTC by Manga Tengu
Modified: 2022-09-16 13:11 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Manga Tengu 2022-07-07 11:58:59 UTC
git bde9f77

Can't pan with the 2 fingers on the trackpad of my M1 MacBook pro. Zooming and Rotating are ok. I didn't touch the canvas input setting to notice that change.

I saw it on 5.0.2 already.
Comment 1 sh_zam 2022-07-26 11:30:11 UTC
> I saw it on 5.0.2 already.

I wonder what do you mean by this? Were you able to reproduce the bug on 5.0.2?
Comment 2 Bug Janitor Service 2022-08-10 04:35:45 UTC
Dear Bug Submitter,

This bug has been in NEEDSINFO status with no change for at least
15 days. Please provide the requested information as soon as
possible and set the bug status as REPORTED. Due to regular bug
tracker maintenance, if the bug is still in NEEDSINFO status with
no change in 30 days the bug will be closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

If you have already provided the requested information, please
mark the bug as REPORTED so that the KDE team knows that the bug is
ready to be confirmed.

Thank you for helping us make KDE software even better for everyone!
Comment 3 Bug Janitor Service 2022-08-25 04:35:47 UTC
This bug has been in NEEDSINFO status with no change for at least
30 days. The bug is now closed as RESOLVED > WORKSFORME
due to lack of needed information.

For more information about our bug triaging procedures please read the
wiki located here:
https://community.kde.org/Guidelines_and_HOWTOs/Bug_triaging

Thank you for helping us make KDE software even better for everyone!
Comment 4 Manga Tengu 2022-08-25 09:19:46 UTC
I was trying to understand what was going and and I saw the pinch gesture was bound to pop up palette... I don't know what happened to my input config but I decided to reset it to default and it worked fine. So sorry about that.
Comment 5 Halla Rempt 2022-09-13 10:01:25 UTC
Git commit ce40a422a7b70ba598c26a8508ae0b9427329961 by Halla Rempt, on behalf of Sharaf Zaman.
Committed on 13/09/2022 at 10:01.
Pushed by rempt into branch 'master'.

Fix MacOS Gestures

Previously, the gesture handling on MacOS was a bit of a mess. If we had
a GestureType in our config, it would conflict with MacOSGestureType.
Resulting in gestures working only when they're loaded before or after
others.

Now, this is sorted. MacOSGestureType is handled just like GestureType
is handled everywhere but in the serializer and unserialzer.

In unserialize:

We disable GestureType gestures from being loaded, but instead load
MacOSGestureType ones (this we load as GestureType because nobody else
is aware of the destinction between this).

In serialize:

We save GestureType gestures as MacOSGestureType. Because that's how
they're shown in UI due to our hack in unserialize.

M  +18   -1    libs/ui/input/kis_shortcut_configuration.cpp

https://invent.kde.org/graphics/krita/commit/ce40a422a7b70ba598c26a8508ae0b9427329961
Comment 6 Halla Rempt 2022-09-13 10:02:02 UTC
Git commit 05d6ae2aac46cf59a62a0886cddccd05db979875 by Halla Rempt, on behalf of Sharaf Zaman.
Committed on 13/09/2022 at 10:01.
Pushed by rempt into branch 'krita/5.1'.

Fix MacOS Gestures

Previously, the gesture handling on MacOS was a bit of a mess. If we had
a GestureType in our config, it would conflict with MacOSGestureType.
Resulting in gestures working only when they're loaded before or after
others.

Now, this is sorted. MacOSGestureType is handled just like GestureType
is handled everywhere but in the serializer and unserialzer.

In unserialize:

We disable GestureType gestures from being loaded, but instead load
MacOSGestureType ones (this we load as GestureType because nobody else
is aware of the destinction between this).

In serialize:

We save GestureType gestures as MacOSGestureType. Because that's how
they're shown in UI due to our hack in unserialize.
(cherry picked from commit ce40a422a7b70ba598c26a8508ae0b9427329961)

M  +18   -1    libs/ui/input/kis_shortcut_configuration.cpp

https://invent.kde.org/graphics/krita/commit/05d6ae2aac46cf59a62a0886cddccd05db979875